--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@nestjs/mongoose": "^9.2.2",
     "@nestjs/passport": "^9.0.3",
     "@nestjs/platform-express": "^9.0.0",
+    "apollo-server-express": "^3.12.0",
     "bcrypt": "^5.1.0",
     "graphql": "^16.6.0",
     "mongoose": "^7.0.4",
