--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "@nestjs/mongoose": "^9.2.2",
     "@nestjs/passport": "^9.0.3",
     "@nestjs/platform-express": "^9.0.0",
+    "@nestjs/platform-socket.io": "^9.4.0",
+    "@nestjs/websockets": "^9.4.0",
     "apollo-server-express": "^3.12.0",
     "bcrypt": "^5.1.0",
     "graphql": "^16.6.0",
