--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@nestjs/passport": "^9.0.3",
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/platform-socket.io": "^9.4.0",
+    "@nestjs/serve-static": "^3.0.1",
     "@nestjs/websockets": "^9.4.0",
     "apollo-server-express": "^3.12.0",
     "bcrypt": "^5.1.0",
@@ -39,6 +40,7 @@
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
+    "randomstring": "^1.3.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0"
   },
