--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "@apollo/server": "^4.6.0",
+    "@graphql-tools/schema": "^10.0.2",
     "@nestjs/apollo": "^11.0.5",
     "@nestjs/common": "^9.0.0",
     "@nestjs/config": "^2.3.1",
@@ -37,13 +38,15 @@
     "bcrypt": "^5.1.0",
     "graphql": "^16.6.0",
     "graphql-subscriptions": "^2.0.0",
+    "graphql-ws": "^5.14.3",
     "mongoose": "^7.0.4",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "randomstring": "^1.3.0",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.2.0"
+    "rxjs": "^7.2.0",
+    "ws": "^8.16.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^9.0.0",
